contact data show admin side

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -61,7 +61,8 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="submit" value="Send Message" class="btn btn-primary" >
+										<input type="submit" value="Send Message" class="btn btn-primary"  onclick="alert('thank u')">
+
 									</div>
 								</div>
 							</div>
@@ -71,6 +72,7 @@
 				</form>
 			</div>
 		</div>
+
 		<!-- END fh5co-contact -->
 		<div id="map" class="fh5co-map"></div>
 		<!-- END map -->
