data show proper fomat in admin side

--- a/views/admin/admincontact.ejs
+++ b/views/admin/admincontact.ejs
@@ -1,9 +1,10 @@
 <html>
 
 <form name="admincontact" action="/getAdminContactdata" method="get">
-<button type="submit">get data</button>
+
+    <input type="submit" onclick="">
 
 
 
-</form>>
+</form>
 </html>
