--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -56,13 +56,12 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<textarea name="msg" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
+										<textarea name="message" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="submit" value="Send Message" class="btn btn-primary"  onclick="alert('thank u')">
-
+										<input type="submit" value="Send Message" class="btn btn-primary"  onclick="alert('Success')">
 									</div>
 								</div>
 							</div>
